added rudimentary card dealing and scoring

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="styles.css" type="">
 </head>
 <body>
+    <p>score:</p>
+    <p id="score">0</p>
     <div id="cards">
         <div class="card"></div>
         <div class="card"></div>
