--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Simpleset</title>
+  <title>Subset</title>
   <link rel="stylesheet" href="reset.css" type="">
   <link rel="stylesheet" href="styles.css" type="">
 </head>
