Lint and reorganize SCSS

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
   <title>Subset</title>
-  <link rel="stylesheet" href="reset.css" type="">
-  <link rel="stylesheet" href="styles.css" type="">
+  <link rel="stylesheet" href="styles/index.css" type="">
 </head>
 <body>
-  <div id="cards">
+  <div class="cards">
   </div>
   <script type="text/javascript" src="app.js"></script>
 </body>
