--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <title>Subset</title>
-  <link rel="stylesheet" href="styles/index.css" type="">
+  <link rel="stylesheet" href="css/index.min.css" type="">
 </head>
 <body>
   <div class="cards">
   </div>
-  <script type="text/javascript" src="app.js"></script>
+  <script type="text/javascript" src="js/main.min.js"></script>
 </body>
 </html>
